--- a/GrainInterface.CMS/packages.config
+++ b/GrainInterface.CMS/packages.config
@@ -20,6 +20,9 @@
   <package id="Microsoft.Orleans.CodeGenerator.MSBuild" version="3.2.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Orleans.Core" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.Core.Abstractions" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansRuntime" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
