--- a/GrainInterface.WMS/GrainInterface.WMS.csproj
+++ b/GrainInterface.WMS/GrainInterface.WMS.csproj
@@ -189,7 +189,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IWMS.cs" />
+    <Compile Include="Interface\IWMS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
