--- a/Silo.CMS/packages.config
+++ b/Silo.CMS/packages.config
@@ -15,21 +15,24 @@
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.4" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.4" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Console" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.ObjectPool" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net462" />
-  <package id="Microsoft.Orleans.CodeGenerator.MSBuild" version="3.2.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Orleans.Core" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.Core.Abstractions" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.OrleansRuntime" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Server" version="3.2.0" targetFramework="net462" />
   <package id="MongoDB.Bson" version="2.10.4" targetFramework="net462" />
   <package id="MongoDB.Driver" version="2.10.4" targetFramework="net462" />
   <package id="MongoDB.Driver.Core" version="2.10.4" targetFramework="net462" />
   <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
+  <package id="Orleans.Providers.MongoDB" version="3.1.7" targetFramework="net462" />
   <package id="SharpCompress" version="0.25.1" targetFramework="net462" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
