--- a/GrainImplement.CMS/GrainImplement.CMS.csproj
+++ b/GrainImplement.CMS/GrainImplement.CMS.csproj
@@ -171,10 +171,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extend\ListExtend.cs" />
     <Compile Include="Persistence\CustomerManager.cs" />
     <Compile Include="Persistence\GroupManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\CMSService.cs" />
+    <Compile Include="Util\Helper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
