--- a/Client.HanYangYun/Client.HanYangYun.csproj
+++ b/Client.HanYangYun/Client.HanYangYun.csproj
@@ -202,19 +202,19 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\GrainInterface.CMS\GrainInterface.CMS.csproj">
+    <ProjectReference Include="..\GrainInterface.CMS\GrainInterface.CMS.csproj">
       <Project>{9e07c962-2323-4fd4-98d0-70baf2a11527}</Project>
       <Name>GrainInterface.CMS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\GrainInterface.WMS\GrainInterface.WMS.csproj">
+    <ProjectReference Include="..\GrainInterface.WMS\GrainInterface.WMS.csproj">
       <Project>{7803a325-75e6-49c8-918b-b3e50fae039d}</Project>
       <Name>GrainInterface.WMS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Meta\Establishment\Establishment.csproj">
+    <ProjectReference Include="..\Meta\Establishment\Establishment.csproj">
       <Project>{2df911bc-7c7c-463f-955f-d8b6257ad069}</Project>
       <Name>Establishment</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Meta\Orleans.MultiClient\Orleans.MultiClient.csproj">
+    <ProjectReference Include="..\Meta\Orleans.MultiClient\Orleans.MultiClient.csproj">
       <Project>{eb417467-b03b-4380-8417-c103aa665373}</Project>
       <Name>Orleans.MultiClient</Name>
     </ProjectReference>
