--- a/GrainInterface.BMS/GrainInterface.BMS.csproj
+++ b/GrainInterface.BMS/GrainInterface.BMS.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\IBMS.cs" />
+    <Compile Include="Interface\IHanYangCloudMapService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
