--- a/Meta/Orleans.MultiClient/Orleans.MultiClient.csproj
+++ b/Meta/Orleans.MultiClient/Orleans.MultiClient.csproj
@@ -18,6 +18,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Orleans.MultiClient.xml</DocumentationFile>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
