--- a/Client.HanYangYun/packages.config
+++ b/Client.HanYangYun/packages.config
@@ -26,12 +26,11 @@
   <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
-  <package id="ServiceStack" version="5.9.0" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.9.0" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.9.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.9.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.9.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack" version="3.9.71" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="3.9.71" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.71" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="3.9.71" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net462" />
